--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lobo - Desenvolvedor e Design </title>
+    <title>Jéssica - Desenvolvedora Front End </title>
     <meta name="description" content=" Desenvolvedor Front End e UX/UI Designer localizado em São Paulo.">
     <link rel="stylesheet" href="style.min.css">
     <link rel="stylesheet" href="global.css">
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="img/marca.svg" alt="">
+        
         <nav>
             <ul class="header-menu">
                 <li> <a href="#experiencia"> Experiência </a> </li>
@@ -31,9 +31,9 @@
     </header>
 
     <main class="introducao">
-        <img src="img/perfil.jpg" alt="Lobo Cinza">
+        <img src="img/eu.jpg" alt="Minha foto">
         <div>
-            <h1> Desenvolvedor <br>
+            <h1> Desenvolvedora <br>
                 Front End & <br> UX/UI Designer</h1>
             <p>Localizado em São Paulo 🏙️</p>
         </div>
@@ -41,13 +41,13 @@
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 class="subtitulo"> Experiência </h2>
         <div>
-            <p class="experiencia-texto"> Desenvolvo pequenos projetos como o Bikcreft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do Projeto.</p>
+            <p class="experiencia-texto"> Desenvolvo pequenos projetos para comércios locais em minha região usado <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> e <strong>React</strong>. </p>
 
 <div class="empresa">
-<span class="empresa-ano"> 2045 </span>
+<span class="empresa-ano"> 2022 </span>
 <h3 class="empresa-titulo"> Bikcraft </h3>
-<span class="empresa-titulo"> Desenvolvedor Júnior</span>
-<p class="empresa-texto"> No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design. </p>
+<span class="empresa-titulo"> Curso Origamid </span>
+<p class="empresa-texto"> No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. </p>
 <ul class="empresa-habilidades">
     <li> HTML </li>
     <li> CSS </li>
@@ -57,10 +57,10 @@
 </ul>
     </div>
     <div class="empresa">
-        <span class="empresa-ano"> 2044-45 </span>
-        <h3 class="empresa-titulo"> Surfbot </h3>
-        <span class="empresa-titulo"> Estagiario </span>
-        <p class="empresa-texto"> Surfbot é uma empresa que oferece aulas de Surf no Rio de Janeiro. O projeto foi feito com HTML, CSS e JavaScript. Todo o projeto foi feito do zero. </p>
+        <span class="empresa-ano"> 2023 </span>
+        <h3 class="empresa-titulo"> Corina Doces e Salgados </h3>
+        <span class="empresa-titulo"> Freelancer </span>
+        <p class="empresa-texto"> A Corina Doces e Salgados é uma confeitaria situada na zona sul de São Paulo. O projeto foi feito com HTML, CSS e JavaScript. Todo o projeto foi feito do zero. </p>
         <ul class="empresa-habilidades">
             <li> HTML </li>
             <li> CSS </li>
@@ -68,13 +68,14 @@
         </ul>
             </div>
             <div class="empresa">
-                <span class="empresa-ano"> 2044 </span>
-                <h3 class="empresa-titulo"> Brafé </h3>
-                <span class="empresa-titulo"> Desenvolvedor Júnior</span>
-                <p class="empresa-texto"> Mais de três projetos foram desenvolvidos para a empresa Brafé. Eu trabalhei na criação do E-mail Marketing e também no HTML. </p>
+                <span class="empresa-ano"> 2023 </span>
+                <h3 class="empresa-titulo"> Portfólio  </h3>
+                <span class="empresa-titulo"> Estágiaria | Desenvolvedor Júnior </span>
+                <p class="empresa-texto"> Criação do meu Portfólio com HTML, CSS e JavaScript. </p>
                 <ul class="empresa-habilidades">
-                    <li> E-mail Marketing </li>
                     <li> HTML </li>
+                    <li> CSS </li>
+                    <li> JavaScript </li>
                     <li> UX Design </li>
                     <li> UI Design </li>
                 </ul>
@@ -88,7 +89,7 @@
 
         <div>
             <p class="formacao-texto">
-                Minha mais recente experiência academia foi o <strong>mestrado</strong> 👩‍🎓 que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com o curso intensivo online. 
+                Minha experiência academia mais recente está sendo a <strong>Graduação</strong> 👩‍🎓 em <strong>Sistemas para Internet</strong>. Além disso me mantenho sempre atualizada com cursos online. 
             </p>
 
             <ul class="faculdade-lista">
@@ -99,13 +100,13 @@
                 </li>
                 <li class="faculdade"> 
                     <span class="faculdade-tipo">Técnologo</span>
-                    <h3 class="faculdade-curso"> Design Digital </h3>
-                    <span class="faculdade-instituicao"> FMU </span>
+                    <h3 class="faculdade-curso"> Sistemas para Internet </h3>
+                    <span class="faculdade-instituicao"> Universidade Anhembi Morumbi </span>
                     </li>
                     <li class="faculdade"> 
-                        <span class="faculdade-tipo">Mestrado</span>
-                        <h3 class="faculdade-curso"> User Experience Design </h3>
-                        <span class="faculdade-instituicao"> FMU </span>
+                        <span class="faculdade-tipo">Extracurricular </span>
+                        <h3 class="faculdade-curso"> User Experience </h3>
+                        <span class="faculdade-instituicao"> FIAP </span>
                         </li>
             </ul>
 
@@ -115,13 +116,14 @@
                     <ul>
                         <li> UX Design e UI Design <span> 56h</span></li>
                         <li> Front End para iniciantes <span> 72h</span></li>
+                        <li> JavaScript ES6 <span> 37h</span></li>
                     </ul>
                         </div>
                         <div class="idiomas">
                             <h3> Idiomas </h3>
                             <ul>
-                                <li> Inglês <span> / Fluente</span></li>
-                                <li> Espanhol <span> / Intermediário</span></li>
+                                <li> Inglês <span> / Intermediario</span></li>
+                                <li> Espanhol <span> / Básico</span></li>
                             </ul>
                         </div>
 
@@ -137,11 +139,12 @@
                     <p class="footer-texto"> Estou disponivel para novos projetos no momento. Entre em contato comigo e marcamos uma conversa. 😃 </p>
 
                     <ul class="footer-contato">
-                        <li> jessica.aparecida.silva07@gmail.com</li>
-                        <li> +55 11 99337 6281 </li>
-                        <li> <a href="/">@instagram  </a>  </li>
+                        
+                        <li> <a target="_blank"
+                            href="https://api.whatsapp.com/send?phone=5511993376281"> Entre em contato </a> </li>
+                        <li> <a href="https://github.com/jessi-git"> Github  </a>  </li>
                     </ul>
-                    <p class="footer-copy"> Alguns direitos reservados.</p>
+                    <p class="footer-copy"> </p>
                 </div>
 
 
